# CFD-Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat
data/input/: B_boundary_conditions.txt  B_mesh_filename.txt  B_physical_propertis.txt  COUPLED_solver_settings.txt  SIMPLE_solver_settings.txt  linear_solver_settings.txt  multigrid_settings.txt
data/mesh/: wedge.cas
data/mg_initialization/: MGINIT_input.txt  initialize.bat
data/structured_mesh/: generate_mesh.bat  mesh.txt
data/structured_mesh/blocks/: block1.txt  block2.txt  block3.txt
data/structured_mesh/edges/: bottom.txt  left.txt  right.txt  top.txt
run/log/: .gitignore  show_log.py
run/output/: .gitignore
src/: A_mesh_generator.f90  A_mg_initialization.f90  A_solver.f90  B_bc_manager_module.f90  B_density_based_iterators_module.f90  B_density_based_solver_module.f90  B_diff_operator_module.f90  B_field_manager_module.f90  B_fluxes_manager_module.f90  B_linear_operator_module.f90  B_linear_solver_module.f90  B_matrix_manager_module.f90  B_mesh_coarsening_module.f90  B_mesh_module.f90  B_mg_mesh_hierarchy_module.f90  B_output_manager_module.f90  B_physical_properties_manager_module.f90  B_preconditioner_module.f90  B_solver_config_module.f90
src/alg_diff_kernels/: ADdiff_inviscid_flux_kernel.inc  K_ADdiff_bc_ghost_kernels_module.f90  K_ADdiff_bc_kernels_module.f90  K_ADdiff_fluxes_calculation_module.f90  K_ADdiff_gradient_computation_module.f90  K_ADdiff_physical_properties_module.f90  K_ADdiff_reconstruction_module.f90  K_ADdiff_reiman_solver_module.f90
src/boundary_conditions/: B_bc_base_module.f90  B_bc_inlet_module.f90  B_bc_outlet_module.f90  B_bc_symm_module.f90  B_bc_wall_module.f90
src/factories/: F_density_based_iterator_factory_module.f90  F_diff_operator_factory_module.f90  F_linear_solver_factory_module.f90
src/grid_generator/: B_structured_mesh_module.f90
src/kernels/: K_BLUSGS_module.f90  K_array_sorting_module.f90  K_bc_apply_faces_module.f90  K_bc_apply_ghost_cells_module.f90  K_bc_ghost_kernels_module.f90  K_bc_kernels_module.f90  K_db_mtrx_assembling_module.f90  K_fluxes_calculation_module.f90  K_gradient_computation_module.f90  K_integral_characteristics_module.f90  K_linear_operator_bcsr_module.f90  K_linear_operator_csr_module.f90  K_linear_operator_dense_module.f90  K_matrix_initialization_module.f90  K_mesh_connectivity_module.f90  K_mesh_ordering_module.f90  K_metric2D_computation_module.f90  K_metric3D_computation_module.f90  K_mg_aglomeration_module.f90  K_mg_coarse_mesh_building_module.f90  K_mg_operators_module.f90  K_output_fields_module.f90  K_physical_properties_module.f90  K_preconditioner_bcsr_ilu0_module.f90  K_preconditioner_block_jacobi_module.f90  K_preconditioner_csr_ilu0_module.f90  K_reconstruction_module.f90  K_reiman_solver_module.f90  K_stability_operator_module.f90  K_string_utils_module.f90  K_time_step_calculation_module.f90  inviscid_flux_kernel.inc  inviscid_jacobian_ghosts_kernel.inc  inviscid_jacobian_kernel.inc
